# AmazEngine

./: .gitignore  CMakeLists.txt
assets/: CMakeLists.txt  test.json
shaders/: CMakeLists.txt  clusterLightCull.comp  cullLights.comp  default_lit.frag  depthReduce.comp  findClusters.comp  fullscreen.vert  generateDraws.comp  shadow.frag  shadow.vert  specular_map.frag  textured_lit.frag  tonemap.frag  tri_mesh.vert
src/: AmazEngine.cpp  CMakeLists.txt
src/input/: Input.cpp  Input.h
src/physics/: Collision.cpp  Collision.h  Objects.h  Octree.cpp  Octree.h  Physics.cpp  Physics.h
src/renderer/: PipelineBuilder.cpp  PipelineBuilder.h  Renderer.cpp  Renderer.h  gpu_structs.h  vk_descriptor.cpp  vk_descriptor.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_types.h
src/renderer/backend/: VkBackendRenderer.cpp  VkBackendRenderer.h
src/renderer/util/: BindingType.h  ShaderStages.h  VertexInputDescription.h
src/scene/: ECS.h  component.h  scene.cpp  scene.h  sceneview.h
src/util/: range_view.hpp
